Use net.bytebuddy.experimental=true to run surefire